--- a/node-API/package.json
+++ b/node-API/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "short-uuid": "^4.1.0",
+    "socket.io": "^4.1.3",
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.4",
     "uuid": "^3.4.0",
