--- a/client/bajaj_community/android/settings.gradle
+++ b/client/bajaj_community/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'bajaj_community'
+rootProject.name = 'Bajaj_Finserv_Community'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
