--- a/client/bajaj_community/package.json
+++ b/client/bajaj_community/package.json
@@ -46,12 +46,14 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-picker": "^4.0.6",
+    "react-native-image-viewing": "^0.2.0",
     "react-native-otp-verify": "^1.0.4",
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.5",
     "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
