--- a/node-API/package.json
+++ b/node-API/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
+    "redis": "^3.1.2",
     "short-uuid": "^4.1.0",
     "socket.io": "^4.1.3",
     "swagger-express-mw": "^0.7.0",
