--- a/node-API/package.json
+++ b/node-API/package.json
@@ -8,13 +8,18 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "firebase-admin": "^9.11.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mongodb": "^3.6.10",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "redis": "^3.1.2",
+    "sharp": "^0.28.3",
     "short-uuid": "^4.1.0",
     "socket.io": "^4.1.3",
     "swagger-express-mw": "^0.7.0",
